# mlops_city_concierge

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  simple.model.ipynb  test_google_api.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docker.yml  terraform-apply.yml  terraform-plan.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v2.2-MILESTONE-SEED.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-MILESTONE-AUDIT.md  v2.1-REQUIREMENTS.md  v2.2-MILESTONE-AUDIT.md  v2.2-REQUIREMENTS.md  v2.2-ROADMAP.md
alembic/: env.py
alembic/versions/: 2026_05_06_1356-5187c6b09b25_create_place_embeddings_v2.py  2026_05_06_1356-b932216bf431_baseline.py  2026_05_06_1521-4c4789a14f8f_create_place_documents_view.py  2026_05_06_1609-c428add573d7_add_price_level_rank_function.py  2026_05_08_1000-34679f77f726_add_places_ingest_query_proposals.py  (+3 more)
app/: bootstrap.py  chain.py  config.py  db.py  db_pool.py  db_url.py  errors.py  gemini_compat.py  llm_factory.py  main.py  providers.py  query_log.py  retriever.py  routes.py  schemas.py
configs/: eval_gates.yaml  eval_matrix.yaml  eval_matrix_arm.yaml  eval_matrix_refinement.yaml  eval_queries.yaml  experiments.yaml  falsifier_paraphrases.json
docs/: baseline_regen.md  decisiveness_arm_verdicts.md  decisiveness_dec03_decision.md  eval_gates.md  google_maps_setup.md  loop_falsifier.md  loop_runner.md  post_deploy_demand_backfill.md  promotion_decision.md  public_demo_deployment.md  refinement_retrieval_fix.md  replay_arm_verdicts.md  sandbox_db.md  w8b_verification.md
frontend/: .env.development  .env.production.example  index.html  package-lock.json  package.json  vite.config.js
implementation_plan/: RESUME.md
infra/: .gitignore  CI_SETUP.md  README.md  backend.tf  compute.tf  imports.tf  network.tf  providers.tf  sql.tf
notebooks/: feature_importances.csv  simple.model.ipynb
scripts/: audit_list_content_aimessages.py  build_place_relations.py  check_baselines_fresh.py  check_eval_gates.py  coverage_agent.py  diagnose_chunks.py  embed_places_pgvector.py  embed_places_pgvector_v2.py  eval_agent.py  eval_falsifier.py  eval_matrix.py  eval_ragas.py  ingest.py  ingest_places_sf.py  log_model_to_mlflow.py  loop_falsifier.py  loop_runner.py  probe_gpt5_capture.py  probe_provider_capture.py  provision_sandbox.sh  sandbox_guard.py  seed.py  seed_demand_log.py  set_production_alias.py  smoke_w1.py  smoke_w3.py  w10_convergence_check.py  write_baselines.py
tests/: README.md  conftest.py
(+421 files in other folders)
