[tool.poetry]
name = "mlops-city-concierge"
version = "0.1.0"
package-mode = false  # <--- Add this
description = "Shared MLflow Tracking Server for Team Project"
authors = ["James <pjnhek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true